--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
 		<title>JackfruitDb</title>
 
 		<style type="text/css">
-			body{
-				background-color: #666;
-			}
 		</style>
 	</head>
 	<body style="margin:0;padding:0;">
+		<h1>Components Diagram</h1>
 		<img src="arch.png" />
 	</body>
 </html>
